uninstall mongo driver on build hook

--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -3,4 +3,7 @@ set -e
 
 # Build PHP extra's
 # Update conf/ini files and install pecl extensions
+
+pecl uninstall mongo
+
 ${OPENSHIFT_PHP_DIR}/bin/control build
