removing pecl uninstall mongo

--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -4,6 +4,6 @@ set -e
 # Build PHP extra's
 # Update conf/ini files and install pecl extensions
 
-pecl uninstall mongo
+#pecl uninstall mongo
 
 ${OPENSHIFT_PHP_DIR}/bin/control build
