--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,1 +1,19 @@
 #!/bin/bash
+
+export COMPOSER_HOME="$OPENSHIFT_DATA_DIR/.composer"
+
+if [ ! -f "$OPENSHIFT_DATA_DIR/composer.phar" ]; then
+    curl -s https://getcomposer.org/installer | php -- --install-dir=$OPENSHIFT_DATA_DIR
+else
+    php $OPENSHIFT_DATA_DIR/composer.phar self-update
+fi
+
+( unset GIT_DIR ; cd $OPENSHIFT_REPO_DIR ; php $OPENSHIFT_DATA_DIR/composer.phar install )
+
+chmod 777 ${OPENSHIFT_REPO_DIR}storage
+chmod 777 ${OPENSHIFT_REPO_DIR}storage/app
+chmod 777 ${OPENSHIFT_REPO_DIR}storage/logs
+chmod 777 ${OPENSHIFT_REPO_DIR}storage/framework
+chmod 777 ${OPENSHIFT_REPO_DIR}storage/framework/cache
+chmod 777 ${OPENSHIFT_REPO_DIR}storage/framework/sessions
+chmod 777 ${OPENSHIFT_REPO_DIR}storage/framework/views
